Added initial version of DSObject

--- a/HWdTech.DS/packages/repositories.config
+++ b/HWdTech.DS/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\IOCTests\packages.config" />
+  <repository path="..\ObjectImpl\packages.config" />
   <repository path="..\ScopesTests\packages.config" />
 </repositories>
