--- a/HWdTech.DS/IOCImpls/IOCDefaultImpl.csproj
+++ b/HWdTech.DS/IOCImpls/IOCDefaultImpl.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3CD4A7A4-207C-4996-80D6-5D55A5BA7AD5}</ProjectGuid>
+    <ProjectGuid>{561217AF-F3FC-4ED0-BFC1-7B41FBABE9DB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Utils</RootNamespace>
-    <AssemblyName>Utils</AssemblyName>
+    <RootNamespace>HWdTech.IOCs</RootNamespace>
+    <AssemblyName>IOCDefaultImpl</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,8 +39,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="IOCImpl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\IOCCore\IOCCore.csproj">
+      <Project>{e120a354-7035-4074-88a0-ccab252ef66e}</Project>
+      <Name>IOCCore</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
