--- a/HWdTech.DS/IOCStrategiesImpl/IOCStrategiesImpl.csproj
+++ b/HWdTech.DS/IOCStrategiesImpl/IOCStrategiesImpl.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{1074D46D-88BC-4D61-89A8-CF811107C5E0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IOCStrategiesImpl</RootNamespace>
+    <RootNamespace>HWdTech.IOCs.Strategies</RootNamespace>
     <AssemblyName>IOCStrategiesImpl</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
