--- a/HWdTech.DS/Scope/ScopeDefaultImpl.csproj
+++ b/HWdTech.DS/Scope/ScopeDefaultImpl.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8BF3C417-5C05-4550-A2A6-613DF0B1E4A5}</ProjectGuid>
+    <ProjectGuid>{C00E2B10-CB43-4C60-ABEC-09976FC747A7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ScopesManager</RootNamespace>
-    <AssemblyName>ScopesManager</AssemblyName>
+    <RootNamespace>HWdTech.Scope</RootNamespace>
+    <AssemblyName>ScopeDefaultImpl</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,17 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Scope.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScopesManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Scope\ScopesImpl.csproj">
-      <Project>{c00e2b10-cb43-4c60-abec-09976fc747a7}</Project>
-      <Name>ScopesImpl</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ServiceLocators\Scopes.csproj">
+    <ProjectReference Include="..\ServiceLocators\ScopeCore.csproj">
       <Project>{3e82fcc0-3a58-429c-ab55-d15ad75aacd5}</Project>
-      <Name>Scopes</Name>
+      <Name>ScopeCore</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
