--- a/HWdTech.DS/ScopesImplTests/ScopeDefaultImplTests.csproj
+++ b/HWdTech.DS/ScopesImplTests/ScopeDefaultImplTests.csproj
@@ -6,8 +6,8 @@
     <ProjectGuid>{13293CCB-6775-495E-BC5A-32DD6566E11F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ScopeTests</RootNamespace>
-    <AssemblyName>ScopesImplTests</AssemblyName>
+    <RootNamespace>HWdTech.Scopes.Tests</RootNamespace>
+    <AssemblyName>ScopeDefaultImplTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -54,13 +54,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Scope\ScopesImpl.csproj">
+    <ProjectReference Include="..\Scope\ScopeDefaultImpl.csproj">
       <Project>{c00e2b10-cb43-4c60-abec-09976fc747a7}</Project>
-      <Name>ScopesImpl</Name>
+      <Name>ScopeDefaultImpl</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ServiceLocators\Scopes.csproj">
+    <ProjectReference Include="..\ServiceLocators\ScopeCore.csproj">
       <Project>{3e82fcc0-3a58-429c-ab55-d15ad75aacd5}</Project>
-      <Name>Scopes</Name>
+      <Name>ScopeCore</Name>
     </ProjectReference>
   </ItemGroup>
   <Choose>
